Fixed the align of links & blob size in Footer

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -267,7 +267,28 @@ footer {
 	background-image: url("data:image/svg+xml;utf8, %3Csvg width=%22100%25%22 height=%22100%25%22 viewBox=%220 0 1000 1000%22 xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22 %3E %3Cdefs%3E %3CclipPath id=%22shape%22%3E %3Cpath fill=%22currentColor%22 d=%22M885%2C670.5Q772%2C841%2C582.5%2C904.5Q393%2C968%2C269.5%2C819Q146%2C670%2C104%2C479.5Q62%2C289%2C234.5%2C190Q407%2C91%2C582%2C134.5Q757%2C178%2C877.5%2C339Q998%2C500%2C885%2C670.5Z%22%3E%3C%2Fpath%3E %3C%2FclipPath%3E %3C%2Fdefs%3E %3Cg clip-path=%22url(%23shape)%22%3E %3Cpath fill=%22%23EDBBFF%22 d=%22M885%2C670.5Q772%2C841%2C582.5%2C904.5Q393%2C968%2C269.5%2C819Q146%2C670%2C104%2C479.5Q62%2C289%2C234.5%2C190Q407%2C91%2C582%2C134.5Q757%2C178%2C877.5%2C339Q998%2C500%2C885%2C670.5Z%22 %2F%3E %3C%2Fg%3E %3C%2Fsvg%3E");
 }
 
-@media only screen and (max-width: 380px) {
+@media only screen and (max-width: 390px) {
+	.blob {
+		width: 360px;
+		height: 360px;
+	}
+	.blobBtn {
+		display: flex;
+		align-items: center;
+
+		margin-top: 10px;
+		margin-bottom: 40px;
+	}
+}
+
+@media only screen and (max-width: 360px) {
+	.blob {
+		width: 330px;
+		height: 330px;
+	}
+}
+
+@media only screen and (max-width: 300px) {
 	.blob {
 		width: 280px;
 		height: 280px;
@@ -284,6 +305,7 @@ footer {
 		display: flex;
 		align-items: center;
 		margin-left: 45px !important;
-		margin-bottom: 30px;
+		margin-top: 10px;
+		margin-bottom: 40px;
 	}
 }
